--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body bgcolor=white>
 	Test Changes
+	Feature Change
     <table border="0" cellpadding="10">
       <tr>
         <td>
